--- a/views/editprofile.pug
+++ b/views/editprofile.pug
@@ -21,7 +21,7 @@ block content
                         input#email.form-control(type='email', name='email', placeholder='Email' value=(account ? account.email : ''))
                     .form-group
                         label(for='password') Password
-                        input#password.form-control(type='password', name='password', placeholder='Password' value=(account ? account.password : ''))
+                        input#password.form-control(type='password', name='password', placeholder='Password' value='')
                     .form-group
                         label(for='confirmPassword') Confirm Password
                         input#confirmPassword.form-control(type='password', name='confirmPassword', placeholder='Confirm Password')
