--- a/views/edituser.pug
+++ b/views/edituser.pug
@@ -23,7 +23,7 @@ block content
                         input#email.form-control(type='email', name='email', placeholder='Email' value=(user ? user.email : ''))
                     .form-group
                         label(for='password') Password
-                        input#password.form-control(type='password', name='password', placeholder='Password' value=(user ? user.password : ''))
+                        input#password.form-control(type='password', name='password', placeholder='Password' value='')
                     .form-group
                         label(for='confirmPassword') Confirm Password
                         input#confirmPassword.form-control(type='password', name='confirmPassword', placeholder='Confirm Password')
