--- a/views/header.pug
+++ b/views/header.pug
@@ -21,6 +21,8 @@ div.navbar.navbar-default.navbar-fixed-top(role='navigation')
                         a(href="/") Home
                     li(class=(title === 'Users' ? 'active' : ''))
                         a(href="/users") Users
+                    li(class=(title === 'Organizations' ? 'active' : ''))
+                        a(href="/organizations") Organizations
                 ul.nav.navbar-nav.navbar-right
                     li.bold-type
                         span.navbar-text.bold-type
