--- a/views/user/edituser.pug
+++ b/views/user/edituser.pug
@@ -1,4 +1,4 @@
-extends layout.pug
+extends ../layout
 
 block content
 
@@ -8,17 +8,19 @@ block content
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12.login-form-pre
                 h2 Edit #{subtitle}
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12
-                form(method='POST' action='/users/profile')
-                    input#id(type='hidden', name='id', value=account ? account.id : '')
+                form(method='POST' action='/users/edit/'+user.id)
+
+                    input#_method(type='hidden', name='_method', value='PUT')
+                    input#id(type='hidden', name='id', value=(user ? user.id : ''))
                     .form-group
                         label(for='name') First Name
-                        input#name.form-control(type='text', name='name', placeholder='First Name' value=(account ? account.name : ''))
+                        input#name.form-control(type='text', name='name', placeholder='First Name' value=(user ? user.name : ''))
                     .form-group
                         label(for='last') Last Name
-                        input#last.form-control(type='text', name='last', placeholder='Last Name' value=(account ? account.last : ''))
+                        input#last.form-control(type='text', name='last', placeholder='Last Name' value=(user ? user.last : ''))
                     .form-group
                         label(for='email') Email address
-                        input#email.form-control(type='email', name='email', placeholder='Email' value=(account ? account.email : ''))
+                        input#email.form-control(type='email', name='email', placeholder='Email' value=(user ? user.email : ''))
                     .form-group
                         label(for='password') Password
                         input#password.form-control(type='password', name='password', placeholder='Password' value='')
@@ -32,6 +34,6 @@ block content
                 if errors
                     ul.error
                         for error in errors
-                            li.mess.error!= error.msg
+                            li!= error.msg
                 if success
-                    p.mess.success #{success.msg}
+                    p #{success.msg}
