--- a/views/organization/editorganization.pug
+++ b/views/organization/editorganization.pug
@@ -8,10 +8,10 @@ block content
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12.login-form-pre
                 h2 Edit #{organization.name}
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12
-                form(method='POST' action='/organizations/edit/'+organization.id)
+                form(method='POST' action='/organizations/'+organization.id+'/edit')
                     input#_method(type='hidden', name='_method', value='PUT')
                     input#id(type='hidden', name='id', value=organization.id)
-                    input#owner(type='hidden', name='owner', value=account.id)
+                    input#owner(type='hidden', name='owner', value=organization.owner)
                     .form-group
                         label(for='name') Organization Name
                         input#name.form-control(type='text', name='name', placeholder='Organization Name' value=(organization ? organization.name : ''))
