--- a/views/cards/cards.pug
+++ b/views/cards/cards.pug
@@ -6,6 +6,9 @@ block content
         div.row
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12
                 h2 Cards
+            if account.role == 'admin'
+                div.col-lg-12.margin-top
+                    a(href='/organizations/'+oid+'/tariffs/'+tariff.id+'/transhes/'+transh+'/cards/tocsv') Export to CSV
             if items
                 div.col-lg-12.margin-top
 
@@ -31,34 +34,18 @@ block content
 
 
                 script(type='text/javascript').
-                    function doConfirmDelete(id, name, oid) {
-                        bootbox.confirm({
-                            message: "Delete tariff \""+name+"\"?",
-                            buttons: {
-                                confirm: {
-                                    label: 'Yes',
-                                    className: 'btn-success'
-                                },
-                                cancel: {
-                                    label: 'No',
-                                    className: 'btn-danger'
-                                }
-                            },
-                            callback: function (result) {
-                                if (result) {
-                                    var xhr = new XMLHttpRequest();
-                                    var url = '/organizations/'+oid+'/tariffs/'+id+'/delete';
-                                    xhr.open('DELETE', url, true);
-                                    xhr.setRequestHeader('X-HTTP-Method-Override', 'DELETE');
-                                    xhr.onreadystatechange = function () {
-                                        if (xhr.readyState == XMLHttpRequest.DONE) {
-                                            location.reload();
-                                        }
-                                    }
-                                    xhr.send();
-                                }
+
+                    function toCsv(oid, tariff, transh) {
+                        var xhr = new XMLHttpRequest();
+                        var url = '/organizations/'+oid+'/tariffs/'+tariff+'/transhes/'+transh+'/cards/tocsv';
+                        xhr.open('PUT', url, true);
+                        xhr.setRequestHeader('X-HTTP-Method-Override', 'POST');
+                        xhr.onreadystatechange = function () {
+                            if (xhr.readyState == XMLHttpRequest.DONE) {
+                                location.reload();
                             }
-                        });
+                        }
+                        xhr.send();
                     }
 
             if message
