--- a/views/transh/transhes.pug
+++ b/views/transh/transhes.pug
@@ -32,6 +32,8 @@ block content
                                             td
                                                 a(href='/organizations/'+item.oid+'/tariffs/'+item.tariff+'/transhes/'+item.id+'/cards') List cards
                                                 |&nbsp;|&nbsp;
+                                                a(href='/organizations/' + item.oid + '/tariffs/' + item.tariff + '/transhes/' + item.id + '/edit') Edit
+                                                | &nbsp;|&nbsp;
                                                 a(onclick='doConfirmDelete("'+item.oid+'","'+item.tariff+'","'+item.id+'");return false;' style='cursor:pointer') Delete
 
 
