--- a/views/transh/edittransh.pug
+++ b/views/transh/edittransh.pug
@@ -6,41 +6,45 @@ block content
 
         div.row
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12.login-form-pre
-                h2 Create Transh for #{tariff.name}
+                h2 Update Transh with start # #{transh.start_number}
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12
-                form(method='post' action='/organizations/'+tariff.organization+'/tariffs/'+tariff.id+'/transhes/create')
+                form(method='post' action='/organizations/'+tariff.organization+'/tariffs/'+tariff.id+'/transhes/'+transh.transh+'/edit')
+                    input#_method(type='hidden', name='_method', value='PUT')
                     input#tid(type='hidden', name='tid', value=tariff.id)
                     input#oid(type='hidden', name='oid', value=tariff.organization)
-                    input#owner(type='hidden', name='owner', value=account.id)
+                    input#trid(type='hidden', name='trid', value=transh.transh)
                     .form-group
                         label(for='count') Cards count
-                        input#count.form-control(type='number', name='count', placeholder='Cards count' value='')
+                        input#count.form-control(type='number', name='count', placeholder='Cards count' disabled value=transh.count)
+                    .form-group
+                        label(for='count') Start number
+                        input#start.form-control(type='number', name='start', placeholder='Start number' disabled value=transh.start_number)
 
                     .form-group
                         label(for='type') Card Type
                         select#type.form-control.selectpicker(name="type" type="select" )
                             each type in types
-                                option(value=type.code selected=type.code == tariff.type data-tokens=type.code) #{type.name}
+                                option(value=type.code selected=type.code==transh.type data-tokens=type.code) #{type.name}
                     .form-group
                         label(for='service') Service Type
                         .form-check.form-check-inline
                             each service in services
                                 label.form-check-label
-                                    input.form-check-input(id='service-'+service.code, type='radio', checked=service.code=='discount' name='service', value=service.code)
+                                    input.form-check-input(id='service-' + service.code, type='radio', checked=service.code == transh.service name='service', value=service.code)
                                     | &nbsp;#{service.name}&nbsp;&nbsp;
                     .form-group
                         label(for='status') Card Status
                         select#status.form-control.selectpicker(name="status" type="select" )
                             each status in statuses
-                                option(value=status.code selected=status.code=='published' data-tokens=status.code) #{status.name}
+                                option(value=status.code selected=status.code==transh.status data-tokens=status.code) #{status.name}
                     .form-group
                         label(for='lifetime') Life Time
-                        input#lifetime.form-control(type='number', name='lifetime', placeholder='Life Time' value='')
+                        input#lifetime.form-control(type='number', name='lifetime', placeholder='Life Time' value=transh.lifetime)
                     .form-group
                         label(for='servicetime') Service Time
-                        input#servicetime.form-control(type='number', name='servicetime', placeholder='Service Time' value='')
+                        input#servicetime.form-control(type='number', name='servicetime', placeholder='Service Time' value=transh.servicetime)
 
-                    button.btn.btn-default(type='submit') Generate
+                    button.btn.btn-default(type='submit') Update
 
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12.login-form-pre
                 if errors
