--- a/views/cards/cards.pug
+++ b/views/cards/cards.pug
@@ -76,6 +76,7 @@ block content
                 xhr.open('PUT', url, true);
                 xhr.setRequestHeader('X-HTTP-Method-Override', 'PUT');
                 xhr.onreadystatechange = function () {
+                    //console.log('state=' + xhr.readyState);
                     if (xhr.readyState == XMLHttpRequest.DONE) {
                         location.reload();
                     }
