--- a/views/tariff/edittariff.pug
+++ b/views/tariff/edittariff.pug
@@ -6,7 +6,7 @@ block content
 
         div.row
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12.login-form-pre
-                h2 Edit #{tariff.name+' '+account.role}
+                h2 Edit #{tariff.name}
             div.col-lg-4.col-lg-offset-4.col-md-6.col-md-offset-3.col-sm-12
                 form(method='post' action='/organizations/'+oid+'/tariffs/'+tariff.id+'/edit')
                     input#_method(type='hidden', name='_method', value='PUT')
