--- a/views/transh/createtransh.pug
+++ b/views/transh/createtransh.pug
@@ -12,22 +12,16 @@ block content
                     input#tid(type='hidden', name='tid', value=tariff.id)
                     input#oid(type='hidden', name='oid', value=tariff.organization)
                     input#owner(type='hidden', name='owner', value=account.id)
+                    input#discount(type='hidden', name='discount', value=tariff.discount)
+                    input#type(type='hidden', name='type', value=tariff.type)
                     .form-group
                         label(for='count') Cards count
                         input#count.form-control(type='number', name='count', placeholder='Cards count' value='')
-
                     .form-group
-                        label(for='type') Card Type
-                        select#type.form-control.selectpicker(name="type" type="select" )
-                            each type in types
-                                option(value=type.code selected=type.code == tariff.type data-tokens=type.code) #{type.name}
-                    .form-group
-                        label(for='service') Service Type
-                        .form-check.form-check-inline
-                            each service in services
-                                label.form-check-label
-                                    input.form-check-input(id='service-'+service.code, type='radio', checked=service.code=='discount' name='service', value=service.code)
-                                    | &nbsp;#{service.name}&nbsp;&nbsp;
+                        label(for='pass') Pass
+                        select#pass.form-control.selectpicker(name="pass" type="select" )
+                            each pass in passes
+                                option(value=pass.code selected=pass.code == '0' data-tokens=pass.code) #{pass.name}
                     .form-group
                         label(for='status') Card Status
                         select#status.form-control.selectpicker(name="status" type="select" )
